--- a/style.css
+++ b/style.css
@@ -83,6 +83,11 @@ nav ul li a:hover::after{
 #about{
     padding: 80px 0;
     color: #ababab;
+    width: 100%;
+    background-image: url(images/about-background.gif);
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
 }
 
 .row{
@@ -190,7 +195,7 @@ nav ul li a:hover::after{
 .profile-lists div a{
     text-decoration: none;
     color: #fff;
-    font-size: 12px;
+    font-size: 14px;
     margin-top: 20px;
     display: inline-block;
 }
@@ -201,7 +206,7 @@ nav ul li a:hover::after{
 }
 
 /* --------------projects----------- */
-#projects{
+#my-projects{
     padding: 50px;
 }
 
@@ -379,6 +384,9 @@ nav .fa-solid{
 @media only screen and (max-width: 600px){
     #header{
         background-image: url(images/phone-banner.png);
+    }
+    #about{
+        background-image: url(images/mobile-about-background.gif);
     }
     .header-text{
         margin-top: 140%;
